minikube-deployment.yaml
# rpi namespace
apiVersion: v1
kind: Namespace
metadata:
  name: rpi
---
# rpi-demo-ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rpi-demo-ingress
  namespace: kube-system
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: gov-cio.test
      http:
        paths:
          - path: /actuator
            backend:
              serviceName: rpi-demo-app
              servicePort: 9090

---
# rpi-demo-app (external name)
apiVersion: v1
kind: Service
metadata:
  name: rpi-demo-app
  namespace: kube-system
spec:
  externalName: rpi-demo-app.rpi.svc.cluster.local
  type: ExternalName
  
---
# rpi-demo-app
apiVersion: v1
kind: Service
metadata:
  name: rpi-demo-app
  namespace: rpi
spec:
  ports:
    - name: http
      port: 9090
      targetPort: 8080
      protocol: TCP
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app: rpi-demo-app
  type: NodePort 

---
# assessment service deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rpi-demo-app
  namespace: rpi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rpi-demo-app
  template:
    metadata:
      labels:
        app: rpi-demo-app
    spec:
      containers:
        - name: rpi-demo-app
          image: williamdrew/rpi-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 9779
              name: prometheus
              protocol: TCP
            - containerPort: 8778
              name: jolokia
              protocol: TCP
